tests/src/frontend/syntax/invalid/lvalue_collection_set_in_expr.sk
fun main(): String {
  v![0] = v![1]
}
